# base_clion

./: Arreglos.cpp  CMakeLists.txt  apolo.cpp  ejemplo.cpp  ejercicio 1.cpp  tarea_semana_12.cpp  uno.cpp
carpeta parcial_dos/: parcial_dos.docx  parcialdos.cpp
hoja 4 de trabajo/: hoja4.cpp
mascotasss/: apolo.cpp
paricial_uno/: README.md  parcial_uno  parcial_uno.cpp
semana1/: boolcompleto.cpp  double.cpp
semana5_ciclo_while_for/: ejericicio_2.cpp  tarea_semana_5_for_while.cpp
tarea seamana 9/: tarea_seamana_9.cpp  usuarios.txt
tarea semana 12/: tarea_semana_12.cpp
tarea semana8/: tarea_semana_8.cpp
tarea4_puertas_logicas/: puertas logicas.cpp
tarea7_switch/: semana7_switch.cpp
tarea_semana2_variables/: apellido.cpp  bool.cpp  cadenaletra.cpp  ejerciciointegrador.cpp  letra.cpp  peso.cpp  precio.cpp  series.cpp  string.cpp  tareauno.cpp  triangulo.cpp
tarea_semana_3/: practica_tarea3.cpp
venta/: ventas mascots.cpp
